--- a/YouPersonalTrainer/Views/Article/Article.cshtml
+++ b/YouPersonalTrainer/Views/Article/Article.cshtml
@@ -1,6 +1,7 @@
-﻿@{
-    ViewBag.Title = "Article";
-}
+﻿@model YouPersonalTrainer.Models.ArticlesViewModel
+
+@using YouPersonalTrainer.Models
+
 
 <div>
     <ul class="ArticlesMenu">
@@ -11,23 +12,16 @@
         <li><a href="@Url.Action("ArticlesList", "Article", new { id = "News" })">Новости</a></li>
     </ul>
 </div>
-<section class="AllArticles">
-    <h3><a href="@Url.Action("ArticlesList", "Article", new { id = "Diet" })">Питание</a></h3>
+
+<h3><a href="@Url.Action("ArticlesList", "Article", new { id = "Diet" })">Питание</a></h3>
+
+@foreach (var item in Model.Articles)
+{
+    
     <ul class="ListArticlesDiet">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li><a href="#">@item.Title</a></li>    
     </ul>
-   
+}
     <h3><a href="@Url.Action("ArticlesList", "Article", new { id = "Training" })">Трениовочный процесс</a></h3>
     <ul class="ListArticlesFitness">
         <li></li>
@@ -64,4 +58,4 @@
         <li></li>
         <li></li>
     </ul>
-</section>
+
