--- a/YouPersonalTrainer/Views/DietPages/ProperNutrition.cshtml
+++ b/YouPersonalTrainer/Views/DietPages/ProperNutrition.cshtml
@@ -1,76 +1,80 @@
 ﻿@{
     ViewBag.Title = "ProperNutrition";
 }
-
-<h2>Всё, что нужно знать о правильном питании</h2>
-<p>Только методом проб и ошибок, вы найдетет то, что подходитименно вам. 
-    Не бойтись эксперимантировать, искать питание, которое будет приносить вам удовольствие и пользу.<br />На здоровое питание нужно переходить постепенно, чтобы это не было стрессом для организма.
+<section class="bodyD">
+    <section class="content">
+        <div class="img0">
+        
+            </div>
+<h2 class="DietHeader1">Всё, что нужно знать о правильном питании</h2>
+<p class="DietText">Только методом проб и ошибок, вы найдете то, что подходит именно вам. 
+    Не бойтесь экспериментировать, искать питание, которое будет приносить вам удовольствие и пользу.<br />На здоровое питание нужно переходить постепенно, чтобы это не было стрессом для организма.
     Чтобы организм получал все необходимые питательные вещества и полностью их усваивал необходимо соблюдать основные правила здорового питания и принципы правильного питания.<br />
-
 </p>
-<h3>Основные принципы</h3>
-<p>Правильное питание способно подарить нам здоровье, долголетие и красоту. Оно предполагает, что в организм регулярно, в необходимом количестве и оптимальных соотношениях должны поступать многие питательные вещества – белки, углеводы, жиры, вода, минеральные вещества и витамины. </p>
-<div class="picture1"><img id="picture1" src="/Content/Images/50.jpg"/></div>
-<div class="info1">
+<h3 class="DietHeader">Основные принципы</h3>
+<p class="DietText">Правильное питание способно подарить нам здоровье, долголетие и красоту. Оно предполагает, что в организм регулярно, в необходимом количестве и оптимальных соотношениях должны поступать многие питательные вещества – белки, углеводы, жиры, вода, минеральные вещества и витамины. </p>
+<div class="info1">   
     <ul class="info1">
-        <li>Питайтесь дробно - 5-6 раз в день маленькими порциями каждый 2-3 часа</li>
-        <li> Во время приема пищи нужно отвлечься от мыслей о работе, о делах, не следует вести серьёзных разговоров, читать или смотреть телевизор. Есть надо медленно, наслаждаясь каждым кусочком.</li>
-        <li>Отдавайте предпочтение натуральным продуктам, обладающим высокой питальной ценностью</li>
-        <li>Не допускайте сильное снижение калорийности вашего дневного рациона. Калорийность ежедневного рациона должна соответствовать расходуемой энергии или, быть чуть меньше, если вы хотите похудеть</li>
-        <li>Избегайте слишком калорийную пищи, содержащей большое количество жира и сахара; исклчите выпечку из белой муки, полуфабрикаты, фаст-фуд</li>
-        <li>Съедайте максимальное количество углеводовв первые 2-3 приема, а ближе к вечеру употреблять восновном белки и некрахмалистые овощи.</li>
-        <li>Старайтесь включать белки в каждый прием пищи</li>
-        <li>Старайтесь пить около 2-2.5 л водыв день (30-40мл /на кг вас тела)</li>
-        <li>Последний прием пищи должен быть за 2-3 часа до сна</li>
-        <li>Способы приготовления пищи: варка, варка на пару, тушение, запекание в духовке, микроволновка, а также можно жарить без масла.</li>
-        <li>Прислушивайтесь к своему организму и не ешьте, если вы не голодны. Это важное правило для поддержания нормального веса.</li>
+        <li>Питайтесь дробно - 5-6 раз в день маленькими порциями каждый 2-3 часа;</li>
+        <li> Во время приема пищи нужно отвлечься от мыслей о работе, о делах, не следует вести серьёзных разговоров, читать или смотреть телевизор. Есть надо медленно, наслаждаясь каждым кусочко;.</li>
+        <li>Отдавайте предпочтение натуральным продуктам, обладающим высокой питальной ценностью;</li>
+        <li>Не допускайте сильное снижение калорийности вашего дневного рациона. Калорийность ежедневного рациона должна соответствовать расходуемой энергии или, быть чуть меньше, если вы хотите похудеть;</li>
+        <li>Избегайте слишком калорийную пищи, содержащей большое количество жира и сахара; исклчите выпечку из белой муки, полуфабрикаты, фаст-фуд;</li>
+        <li>Съедайте максимальное количество углеводовв первые 2-3 приема, а ближе к вечеру употреблять восновном белки и некрахмалистые овощи;</li>
+        <li>Старайтесь включать белки в каждый прием пищи;</li>
+        <li>Старайтесь пить около 2-2.5 л водыв день (30-40мл /на кг вас тела);</li>
+        <li>Последний прием пищи должен быть за 2-3 часа до сна;</li>
+        <li>Способы приготовления пищи: варка, варка на пару, тушение, запекание в духовке, микроволновка, а также можно жарить без масла;</li>
+        <li>Прислушивайтесь к своему организму и не ешьте, если вы не голодны. Это важное правило для поддержания нормального веса;</li>
     </ul>
     <p>
      
     </p>
 </div>
-<h3>Основные ошибки</h3>
-<div class="info2">
-    <ul class="info2">
-        <li><h5>Ошибка первая – неверный настрой</h5>
+<h3 class="DietHeader">Основные ошибки</h3>
+<div class="info1">
+    <ul class="info1">
+        <li><h5 class="DietHeader2">Ошибка первая – неверный настрой</h5>
             <p>Избавиться от лишних сантиметров можно только при наличии безграничной веры в свои силы и успех. Просто примите решение: с этого момента (ни с понедельника, ни с начала месяца, ни с первого января), а здесь и сейчас вы начинаете работу над собой и ничего не сможет свернуть Вас с намеченного пути.<br />
             Не настраивайтесь на похудение. Настройтесь на правильное сбалансированное питание и здоровый образ жизни. </p>
         </li>
-        <li><h5>Ошибка вторая – отсутствие физических нагрузок</h5>
+        <li><h5 class="DietHeader2">Ошибка вторая – отсутствие физических нагрузок</h5>
             <p>Уменьшить жировые отложения без физической активности невозможно. 
                 Физические упражнения могут быть самыми различными: начиная от пробежек по утрам в парке и заканчивая посещение плавательного бассейна. 
                 Самым антиспортивным людям подойдет йога или просто прогулки в быстром темпе. Похудение без занятий спортом тоже возможно. Но с физическими нагрузками дело пойдет быстрее и качественный. 
                 Движение ускоряет обмен веществ.</p>
         </li>
-        <li><h5>Ошибка третья – отказ от воды</h5>
+        <li><h5 class="DietHeader2">Ошибка третья – отказ от воды</h5>
             <p>Ограничивая объем и калорийность пищи, ни в коем случае нельзя отказываться от приема воды в достаточном количестве. Выпивать необходимо полтора-два литра жидкости в сутки. 
                 Снижение потребления воды и, правда, может привести к потере какого-то веса (по весам), но, во-первых, это именно потеря воды, во-вторых, это просто крайне вредно для организма. 
                 Страдающий от обезвоживания, он отомстит Вам замедлением обмена веществ, сухостью кожи, внеплановыми морщинами. Правильный водный режим — очень помогает похудению.</p>
         </li>
-        <li><h5>Ошибка четвертая – курение для похудения</h5>
+        <li><h5 class="DietHeader2">Ошибка четвертая – курение для похудения</h5>
             <p>Миф о том, что курение способствует снижению веса, в корне неверен. На самом деле никотин только нарушает процесс обмена веществ. Многие боятся бросить курить, опасаясь, что тут же наберут вес. 
                 Многие действительно, бросив курить, начинают безостановочно что-то жевать. Но это происходит не от того, что их мучает голод, а от того, что курение по сути своей — реализация одного из базовых рефлексов — сосательного. 
                 Вот рука и тянется сама положить в рот хоть что-нибудь. Постарайтесь найти альтернативу.</p>
         </li>
-        <li><h5>Ошибка пятая — вечерний жор</h5>
+        <li><h5 class="DietHeader2">Ошибка пятая — вечерний жор</h5>
             <p>Многие люди, успешно сдерживают свой аппетит целый день, но к вечеру срываются и наедаются на ночь. 
                 Этого следует избегать, поскольку жиры хорошо усваиваются именно вечером. Последний прием пищи должен происходить за 4 часа до отхода ко сну. <br />
                 Хорошо сказано, правда? Но выполнить это не каждому под силу. Для тех, кого вечерний голод терзает невыносимо, предлагаю пойти на небольшие уступки и съесть что-то легкое. Это может быть стакан кефира. 
                 Отличный вариант — хороший белковый коктейль вместо ужина. Он отлично насыщает и вечерний голод постепенно пройдет. </p>
         </li>
-        <li><h5>Ошибка шестая – упор на растительную пищу</h5>
+        <li><h5 class="DietHeader2">Ошибка шестая – упор на растительную пищу</h5>
             <p>Фрукты и овощи должны обязательно присутствовать в рационе любого человека, не только желающего похудеть, но о белках — строительном материале для клеток, забывать не стоит. 
                 Нежирное мясо, яйца, творог, бобовые, также должны присутствовать в рационе.</p>
         </li>
-        <li><h5>Ошибка восьмая – снижение веса в ущерб здоровью и красоте</h5>
+        <li><h5 class="DietHeader2">Ошибка седьмая – снижение веса в ущерб здоровью и красоте</h5>
             <p>Многие, кому удается придерживаться правильного питания продолжительное время, радуются результатам на весах и уменьшению объемов, но не замечают (или не хотят замечать) ухудшения состояния кожи, ногтей, волос. 
                 И это в корне неправильно. Скорей всего, это свидетельствует о недостатке витаминов или каких-то микроэлементов. 
                 Здоровье кожи, волос и ногтей во время похудения необходимо поддерживать с помощью витаминных комплексов.</p>
         </li>
-        <li><h5>Ошибка десятая – недосып</h5>
+        <li><h5 class="DietHeader2">Ошибка восьмая – недосып</h5>
             <p>Легкомысленное отношение к правильному полноценному сну — ошибка не только худеющих, но и вообще большинства людей нашего поколения. 
                 Вечерне-ночные бдения у компьютера, телевизора и других достижений прогресса крайне отрицательно влияют на здоровье и на снижение веса.
             </p>
         </li>
     </ul>
 </div>
+        </section>
+</section>
