--- a/YouPersonalTrainer/Views/DietPages/ProteinDiet.cshtml
+++ b/YouPersonalTrainer/Views/DietPages/ProteinDiet.cshtml
@@ -1,5 +1,113 @@
 ﻿@{
-    ViewBag.Title = "ProteinDiet";
+    ViewBag.Title = "ProperNutrition";
 }
-
-<h2>ProteinDiet</h2>
+<section class="bodyDiet">
+    <section class="content">
+        <div class="img1"></div>
+        <h2 class="DietHeader1">Белковое питание (низкоуглеводная диета) для похудения</h2>
+        <p class="DietText">Белковые диеты признаны одними из самых эффективных в плане снижения веса. 
+            Употребляя в пищу большое количество белковых продуктов и блюд, можно довольно быстро избавиться от лишних килограммов.<br />
+            Такое питание часто рекомендуют людям, которые занимаются спортом и желают снизить вес. Белок, как строительный материал клеток и тканей, 
+            помогает создать мышечный «рельеф», что делает фигуру привлекательной и стройной. Но так ли полезно белковое питание для похудения? 
+            Что необходимо знать, чтобы снижать вес правильно и без вреда для здоровья? Какие продукты являются основными при белковом питании?</p>
+        <p class="DietText">Белок, наравне с жирами и углеводами, является макронутриентом и служит основным стройматериалом нашего организма. 
+            Если углеводы – это наше топливо, то белок – это наиважнейший структурный элемент, который образуется с помощью скрепления аминокислот 
+            органическими соединениями.<br />Человеческому организму белок требуется в качестве источника аминокислот, 
+            которые при определенных условиях могут быть переработаны в углеводы и использованы как топливо. Взрослые должны ежедневно съедать 
+            не менее 0,8 грамма белка на каждый килограмм веса тела - это примерно 58 граммов для взрослого человека весом в 72 кг в соответствии с 
+            рекомендациями Института медицины. В течение любого приема пищи рекомендуется употреблять 56-84 грамма приготовленного мяса, птицы или рыбы или половину 
+            чашки вареной фасоли.</p>
+        <p class="DietText">Безуглеводная диета, как и любая другая, является огромной нагрузкой на человеческий организм. 
+            Поэтому диетологи считают, что применяться такая диета должна только в крайних случаях и обязательно под наблюдением лечащего врача. 
+            Хотя некоторые врачи берут на себя ответственность, разрешая прибегать к безуглеводной диете молодым и здоровым людям. В связи с этим все диетологи 
+            пришли к единому выводу, что лучше всего ограничиться тем, чтобы значительно снизить употребление кондитерских изделий и сахара. Безопаснее 
+            будет употреблять овощи, содержащие углеводы, и мясо, в котором содержится достаточное количество белков. При этом необходимо соблюдать определенную 
+            пропорцию.</p>
+        <p class="Footnote">Диетологи советуют сначала хорошо подумать и все взвесить, прежде чем садиться на безуглеводную диету.</p>
+        <h3 class="DietHeader">Особенности белковой диеты</h3>
+        <p class="DietText">К особенностям безуглеводной диеты относится то, что она предполагает исключение из рациона питания всех углеводных продуктов 
+            или употребление такого их количества, что в течение суток они дадут не более 250 ккал. Углеводы могут потребляться в виде цитрусовых ягод, овощей. 
+            Накладывается жесткое ограничение на молочные продукты, сладкие напитки, картофель, жиры, морковь, кукурузу, алкоголь. Не накладывается ограничений 
+            на употребление мяса, рыбы, птицы, творога, сыра. Пища должна потребляться небольшими порциями 5-6 раз в день. <br />Для приготовления жареных блюд 
+            предусмотрено использование растительного масла, желательно, оливкового. Соль должна использоваться по-минимуму. После приема пищи в течение 30-ти 
+            минут не допускается употребление жидкости. Кроме этого, особенностью безуглеводной диеты является отсутствие питания после 8-ми часов вечера.<br />
+            В основе безуглеводной диеты заложено питание белковыми продуктами, такими как морепродуктами, мясом и яйцами. Углеводы не содержатся в жирах сливочного 
+            и растительного масел, в некоторых сырах, к примеру, чеддере, пармезане и мюнстере. В большой части овощей углеводы содержатся в виде крахмала или 
+            клетчатки, но в салате латук вовсе нет углеводов. <br />К напиткам, не содержащим углеводов, относятся вода, кофе, черный чай, диетические напитки 
+            с сахарином или аспартамом.</p>
+        <h3 class="DietHeader">Основные правила белковой диеты</h3>
+        <p class="DietText">При отказе от первостепенных энергетиков всего организма происходит удивительная вещь – организм начинает добычу энергии 
+            из других источников – он начинает перерабатывать жир! И результат не заставить себя ждать – с десяток килограммов уйдут с легкостью.<br />
+            Резкое снижения уровня углеводов достигается путем отказа от таких продуктов питания: хлеб, сладкое, крупы, макароны, фрукты, картофель и мучные изделия.
+             В основном их заменяют «медленными» углеводами, преимущественно в форме пищевых волокон. Следовать безуглеводной диете легко. Необходимо запомнить всего 
+            одну цифру — 250. Это максимальное количество калорий, которые в суточном рационе могут быть представлены углеводами. Узнать энергетическую «стоимость»
+             продукта можно, например, при помощи таблицы калорийности. Решившись придерживаться безуглеводной диеты, будьте готовы к тому, что из рациона исключаются 
+            выпечка и других мучные изделия, сладости, овощи, богатые крахмалом, фрукты и ягоды, кроме кислых. При этом не ограничивается употребление мясных продуктов,
+            рыбы и сыров. На безуглеводной или низкоуглеводной диете вы точно не будете голодать, поскольку, во-первых, калорийность пищи, не содержащей карбо, 
+            не регламентируется, во-вторых, объем порций и их количество также не измеряются. Однако с точки зрения здравого смысла для того, чтобы похудеть и 
+            оздоровиться, желательно не объедаться и не налегать на жирные бифштексы, в составлении меню ориентируясь на гармонию между богатыми белком продуктами 
+            и бедными крахмалом овощами. Пресловутые 250 углеводных ккал также желательно «набирать» не при помощи шоколадок и конфет, а добавляя в рацион источники 
+            медленно усваивающихся углеводов — овощи, каши, цельнозерновые продукты. Сладкое и выпечка, даже употребленные в ограниченном количестве, вызывают резкие 
+            скачки сахара в крови, что приводит к вспышкам голода, вызыванных притоком инсулина, и метаболическим сбоям.</p>
+            
+        <h3 class="DietHeader">Каких продуктов стоит избегать на безуглеводной диете</h3>
+        <p class="DietText"> Помимо ожидаемого запрета на любую выпечку, сахар и практически все крупы, безуглеводная диета предполагает отказ (или существенное 
+            ограничение) употребления следующих продуктов:</p>
+        <div class="info1">
+            <ul class="info1">
+                <li>Крахмалистых овощей (особенно таких распространенных в наших широтах как картофель, морковь, свекла, кукуруза);</li>
+                <li>Искуственных подсластителей (несмотря на отсутствие в составе сахарозы, они вызывают устойчивую тягу к сладкому);</li>
+                <li>Продуктов, отмеченных как «диетические» или «обезжиренные» (в их составе много сомнительных добавок для улучшения вкуса, 
+                    в том числе содержащих сахар и крахмал);</li>
+                <li>Алкоголя;</li>
+                <li>Фруктов (кроме цитрусовых и кислых ягод. Некоторые специалисты по питанию допускают также употребление кокоса, персиков и яблок 
+                    на безуглеводной диете);</li>
+                <li>Трансжиров (гидрогенизированных или частично гидрогенизированных);</li>
+                <li>Продуктов, подвергшихся ощутимой промышленной обработке (замороженные готовые блюда, как правило, содержат значительное количество 
+                    углеводосодержащих добавок);</li>
+            </ul>
+        </div>        
+         <h3 class="DietHeader">Лучшие продукты для безуглеводной диеты</h3>
+        <div class="info1">
+            <ul class="info1">
+                <li><h5 class="DietHeader2">Мясо</h5>
+                    <p>Говядина, телятина, курица, индейка, кролик.</p>
+                </li>
+                <li><h5 class="DietHeader2">Субпродукты и яйца</h5>
+                    <p>Печень, сердце, язык, яйцо птицы (куриное, утиное, перепелиное).</p>
+                </li>
+                <li><h5 class="DietHeader2">Рыба и морепродукты</h5>
+                    <p>Филе морской рыбы, крабы, омары, креветки.</p>
+                </li>
+                <li><h5 class="DietHeader2">Молочные продукты</h5>            
+                    <p>Творог зерновой, йогурт без добавок, кефир, сметана, с осторожностью — цельное молоко.</p>   
+                </li>        
+                <li><h5 class="DietHeader2">Овощи</h5>            
+                    <p>Все листовые овощи и салаты, капуста, побеги бамбука, артишоки, кулинарные травы, болгарский перец, цуккини, стручковый горох и фасоль, 
+                        лук, с осторожностью - грибы.</p>
+                </li>
+                <li><h5 class="DietHeader2">Фрукты и ягоды</h5>            
+                    <p>Лимоны, апельсины, грейпфруты, гранат, зеленые яблоки, клюква, смородина, клубника.</p>        
+                </li>        
+                <li><h5 class="DietHeader2">Семена и орехи</h5>           
+                    <p>Кедровые орехи, миндаль, грецкий орех, семена подсолнечника, тыквы, кунжут.</p>        
+                </li>
+            </ul>
+        </div>
+        <h3 class="DietHeader">Правильный выход из диеты</h3>
+        <p class="DietText">Если все-таки решено садиться на безуглеводную диету, то диетологи советуют узнать, как правильно из нее выйти. Не стоит сразу после 
+            окончания диеты бросаться поглощать пищу, богатую углеводами, в больших количествах, так как это может привести к изначальному набору веса. <br />
+            Углеводы в повседневный рацион необходимо вводить постепенно. Отдать предпочтение в первое время лучше макаронам, гречке, овсянке и овощным сокам, 
+            так как после окончания диеты нужно соблюдать большую осторожность с жирами. В основном отзывы людей о безуглеводной диете доказывают ее эффективность 
+            в быстрой потере веса. Кстати, нужно отметить, что диетологи не рекомендуют сидеть на безуглеводной диете дольше двух недель. 
+            А садиться на эту диету можно не более 4 раз в год.</p>        
+        <h3 class="DietHeader">Питьевой режим на безуглеводной диете</h3>
+        <p class="DietText">Поскольку безуглеводная диета предполагает избирательный подход к употреблению таких продуктов, как фрукты и овощи, основных стимуляторов 
+            перистальтики кишечника, достаточное употребление жидкости становится важным как никогда. Вода не только помогает выводить непереваренные остатки пищи, 
+            но и является важной частью здорового формирования и обновления клеток организма, вставшего на путь похудения.<br />
+            Суточный объем жидкости, необходимой на безуглеводной диете — от 1,5 до 2 литров чистой негазированной питьевой воды. Также можно пить зеленый чай 
+            (не более 4-5 чашек в день), не возбраняется кофе без сахара. Однако кофе лучше не злоупотреблять, помня о его диуретическом эффекте.<br /> 
+            Фруктовые соки, не только пакетированные, но и свежевыжатые, а также газировки (в том числе диетические) под запретом по предсказуемой причине высокого содержания сахаров.
+        </p> 
+    </section>
+</section>
