--- a/YouPersonalTrainer/Views/DietPages/ProperNutrition.cshtml
+++ b/YouPersonalTrainer/Views/DietPages/ProperNutrition.cshtml
@@ -3,9 +3,7 @@
 }
 <section class="bodyD">
     <section class="content">
-        <div class="img0">
-        
-            </div>
+        <div class="imgProperNutrition"></div>
 <h2 class="DietHeader1">Всё, что нужно знать о правильном питании</h2>
 <p class="DietText">Только методом проб и ошибок, вы найдете то, что подходит именно вам. 
     Не бойтесь экспериментировать, искать питание, которое будет приносить вам удовольствие и пользу.<br />На здоровое питание нужно переходить постепенно, чтобы это не было стрессом для организма.
