--- a/YouPersonalTrainer/Views/DietPages/ProteinDiet.cshtml
+++ b/YouPersonalTrainer/Views/DietPages/ProteinDiet.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
-    ViewBag.Title = "ProperNutrition";
+    ViewBag.Title = "ProteinDiet";
 }
 <section class="bodyDiet">
     <section class="content">
-        <div class="img1"></div>
+        <div class="imgProteinDietProteinDiet"></div>
         <h2 class="DietHeader1">Белковое питание (низкоуглеводная диета) для похудения</h2>
         <p class="DietText">Белковые диеты признаны одними из самых эффективных в плане снижения веса. 
             Употребляя в пищу большое количество белковых продуктов и блюд, можно довольно быстро избавиться от лишних килограммов.<br />
