--- a/YouPersonalTrainer/Views/DietPages/VegetarianCuisine.cshtml
+++ b/YouPersonalTrainer/Views/DietPages/VegetarianCuisine.cshtml
@@ -2,4 +2,47 @@
     ViewBag.Title = "VegetarianCuisine";
 }
 
-<h2>VegetarianCuisine</h2>
+<section class="bodyDiet">
+    <section class="content">
+        <div class="imgVegetarianCuisine"></div>
+
+        <h2 class="DietHeader1">Вегетарианская кухня</h2>
+
+        <p class="DietText">Кто такой вегетарианец, что едят вегетарианцы, и можно ли составить вегетарианское меню так, 
+            чтобы оно было вкусным, полезным и не содержало плоти животных? Ответы вы найдете в этой статье!
+            Приверженцев вегетарианства в последние годы становится все больше: кто-то придерживается этой системы питания 
+            исключительно из диетических соображений, кто-то просто хочет находиться в тренде, ну а для других отказ от употребления 
+            животной плоти – проявление этического отношения к жизни.</p>
+        <h3 class="DietHeader">Виды вегетарианства</h3>
+        <p class="DietText">Существует несколько направлений вегетарианства в зависимости от того, что едят вегетарианцы того или иного вида.</p>
+        <p class="DietText">Лакто-ово-вегетарианцы (или классические вегетарианцы) исключают из рациона мясные и рыбные продукты, однако не отказываются от молока, яиц и мёда.<br />
+            Лакто-вегетарианцы кроме мяса не употребляют также яйца.<br />
+            Ово-вегетарианцы отказываются от употребления мясных и молочных продуктов.<br />
+            Различают также вегетарианцев-сыроедов, рацион которых составляет растительная пища, не прошедшая какую-либо обработку.<br />
+            Фруторианцы употребляют в пищу сырые плоды растений: ягоды, фрукты, орехи, семена.<br />
+            Приверженцы строгого вегетарианства отделились в отдельное направление – веганство, последователи которого не употребляют в пищу все продукты животного происхождения 
+            (молочные продукты, яйца, мёд), а также исключают использование в быту изделий из натуральной кожи и меха.<br /></p>
+        <h3 class="DietHeader">Опасности вегетарианского меню</h3>
+        <p class="DietText">Абсолютное большинство медиков выступает против строгого вегетарианства. Длительное применение принципов веганства становится причиной дефицита цинка, 
+            железа, кальция, незаменимых кислот, витаминов А, D и группы В, поскольку эти вещества либо отсутствуют в продуктах растительного происхождения, либо содержатся в недостаточном количестве. 
+            Хотя содержание минеральных веществ в потребляемой веганами пище может быть достаточным, их усвояемость из растительной пищи очень низка.<br />Исключение из рациона продуктов животного 
+            происхождения может повлечь за собой дисбиоз, белковую недостаточность и гиповитаминоз. Поэтому врачи считают, что непродуманное вегетарианское меню нельзя применять в качестве рациона 
+            питания для детей и подростков, спортсменов, беременных и кормящих женщин.<br />Также, по мнению медиков, вегетарианство противопоказано женщинам в период постменопаузы, поскольку такой рацион 
+            не может удовлетворить повышенную потребность организма в кальции. Пожилые люди, которые поддерживаются вегетарианских принципов, имеют повышенный риск развития остеопороза.<br />
+            Все эти сложности при желании можно решить путем сбалансированного и здорового вегетарианского меню, которое при отсутствии продуктов животного происхождения может содержать витамины и прочие полезные вещества!<br /></p>       
+        <p class="Footnote">Однако прежде, чем вы решили стать вегетарианцем, ответьте на вопрос, зачем вам это нужно. Если это просто стремление поддержать новое веяние моды или попробовать что-то новенькое, скорее всего 
+            даже начинать не стоит, поскольку вегетарианство это образ жизни, который должен отражаться не только в тарелке, но и в его мыслях и поступках человека.</p>
+        <h3 class="DietHeader">Откуда вегетарианцы берут белок</h3>
+        <p class="DietText">Обратите внимание: важно не то, сколько белка вы получаете из одного отдельно взятого продукта, а общее количество потребляемых за день белков и содержащихся в них аминокислот. 
+            Ведь нашему организму нужны не сами белки, а именно аминокислоты, которые не бывают «растительными» или «животными». Их называют «незаменимыми» потому, что эти аминокислоты чаще всего не могут быть синтезированы 
+            самим организмом и должны быть получены извне, то есть с пищей, а не из-за того, что они содержатся лишь в мясе и поэтому мясо «незаменимо». Отсюда и широкий простор для деятельности вегетарианцев, главное, 
+            обладать достаточной информацией.<br />Ежедневно человеку нужно потреблять вместе с пищей в среднем 50 граммов белка. Математически это количество определяется так: разделите рост пополам и вычтите десять. 
+            В среднем получается, что в завтраке, обеде и ужине по отдельности должно быть не менее 15 граммов белка.<br />Белки со всем набором аминокислот содержатся во всех содержащих хлорофилл листовых овощах, в некоторых фруктах (груши, хурма, абрикосы), 
+            а также в проросших зёрнах пшеницы и других злаках. Насыщены белками и все виды орехов. Богатым источником растительного белка являются чечевица, фасоль и другие виды бобовых, соя и соевые продукты (в том числе такие, как тофу и окара), 
+            пищевые каштаны, масло амаранта. Животные белки в избытке содержатся во всех видах молочных продуктов: в твороге, молоке, ряженке, в сырах и т. д.</p>
+        <p class="DietText">Меню вегетарианца тоже может быть разнообразным и полезным, главное – поддерживать баланс питательных веществ и включать в свой рацион молочные и рыбные продукты. 
+            Помните о витаминных и минеральных добавках, которые будут компенсировать дефицит некоторых питательных веществ, которые нельзя получить из растительной пищи. 
+            И уделяйте время тренировкам – это полезно в равно степени и «мясоедам», и вегетарианцам!</p>
+        <p class="DietText">Предлагаем вашему вниманию <a class="links" href="#">вкусные рецепты вегетарианской кухни</a></p>
+    </section>
+</section>
